@@ -7,10 +7,15 @@ import com.planup.planup.domain.friend.dto.BlockedFriendResponseDTO;
 import com.planup.planup.domain.friend.repository.FriendRepository;
 import com.planup.planup.domain.user.entity.User;
 import com.planup.planup.domain.user.service.UserService;
+import com.planup.planup.domain.verification.repository.PhotoVerificationRepository;
+import com.planup.planup.domain.verification.service.TimerVerificationReadService;
 import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import com.planup.planup.domain.friend.converter.FriendConverter;
+
+import java.time.LocalTime;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.ArrayList;
@@ -20,43 +25,47 @@ import java.util.Collections;
 
 @Service
 @AllArgsConstructor
+@Slf4j
 public class FriendServiceImpl implements FriendService {
 
     private final FriendRepository friendRepository;
     private final UserService userService;
     private final FriendConverter friendConverter;
+    private final TimerVerificationReadService timerVerificationService;
+    private final PhotoVerificationRepository photoVerificationRepository;
 
     @Override
-    @Transactional(readOnly = true) 
+    @Transactional(readOnly = true)
     public List<FriendResponseDTO.FriendSummaryList> getFriendSummeryList(Long userId) {
 
         User user = userService.getUserbyUserId(userId);
 
         List<Friend> friendList = friendRepository.findByStatusAndUserIdOrStatusAndFriendIdOrderByCreatedAtDesc(FriendStatus.ACCEPTED, user.getId(), FriendStatus.ACCEPTED, user.getId());
 
-        //Friend 객체의 friend, user 중 내가 아닌 친구를 뽑는다.
+//        //Friend 객체의 friend, user 중 내가 아닌 친구를 뽑는다.
         List<User> list = friendList.stream()
                 .map(f -> f.getFriend().equals(user) ? f.getUser() : f.getFriend())
-                .distinct() // 중복 제거
-                .collect(Collectors.toList());
+                .distinct().toList();
 
-        return List.of(friendConverter.toFriendSummaryList(list));
+        return List.of(friendConverter.toFriendSummaryList(list.stream()
+                .map(this::getFriendInfoSummary)
+                .toList()));
     }
 
     @Override
     @Transactional
     public boolean deleteFriend(Long userId, Long friendId) {
-    // 1. userId와 friendId로 Friend 엔티티를 찾는다.
-    // 2. 해당 Friend 엔티티를 삭제한다.
-    // 3. 성공적으로 삭제했으면 true, 아니면 false 반환
+        // 1. userId와 friendId로 Friend 엔티티를 찾는다.
+        // 2. 해당 Friend 엔티티를 삭제한다.
+        // 3. 성공적으로 삭제했으면 true, 아니면 false 반환
 
         List<Friend> friends = friendRepository.findByStatusAndUserIdOrStatusAndFriendIdOrderByCreatedAtDesc(
-            FriendStatus.ACCEPTED, userId, FriendStatus.ACCEPTED, userId);
+                FriendStatus.ACCEPTED, userId, FriendStatus.ACCEPTED, userId);
 
         Friend friend = friends.stream()
-            .filter(f -> (f.getUser().getId().equals(friendId) || f.getFriend().getId().equals(friendId)))
-            .findFirst()
-            .orElse(null);
+                .filter(f -> (f.getUser().getId().equals(friendId) || f.getFriend().getId().equals(friendId)))
+                .findFirst()
+                .orElse(null);
 
         if (friend != null) {
             friendRepository.delete(friend);
@@ -71,12 +80,12 @@ public class FriendServiceImpl implements FriendService {
     public boolean blockFriend(Long userId, Long friendId) {
         // 1. userId와 friendId로 Friend 엔티티를 찾는다.
         List<Friend> friends = friendRepository.findByStatusAndUserIdOrStatusAndFriendIdOrderByCreatedAtDesc(
-            FriendStatus.ACCEPTED, userId, FriendStatus.ACCEPTED, userId);
+                FriendStatus.ACCEPTED, userId, FriendStatus.ACCEPTED, userId);
 
         Friend friend = friends.stream()
-            .filter(f -> (f.getUser().getId().equals(friendId) || f.getFriend().getId().equals(friendId)))
-            .findFirst()
-            .orElse(null);
+                .filter(f -> (f.getUser().getId().equals(friendId) || f.getFriend().getId().equals(friendId)))
+                .findFirst()
+                .orElse(null);
 
         if (friend != null) {
             friend.setStatus(FriendStatus.BLOCKED); // 상태 변경
@@ -92,10 +101,10 @@ public class FriendServiceImpl implements FriendService {
     public boolean reportFriend(Long userId, Long friendId, String reason, boolean block) {
         // 1. Friend 엔티티 찾기 (ACCEPTED 또는 BLOCKED 상태의 친구 관계)
         List<Friend> acceptedFriends = friendRepository.findByStatusAndUserIdOrStatusAndFriendIdOrderByCreatedAtDesc(
-            FriendStatus.ACCEPTED, userId, FriendStatus.ACCEPTED, userId);
+                FriendStatus.ACCEPTED, userId, FriendStatus.ACCEPTED, userId);
 
         List<Friend> blockedFriends = friendRepository.findByStatusAndUserIdOrStatusAndFriendIdOrderByCreatedAtDesc(
-            FriendStatus.BLOCKED, userId, FriendStatus.BLOCKED, userId);
+                FriendStatus.BLOCKED, userId, FriendStatus.BLOCKED, userId);
 
         // 두 리스트 합치기
         List<Friend> allFriends = new ArrayList<>();
@@ -103,9 +112,9 @@ public class FriendServiceImpl implements FriendService {
         allFriends.addAll(blockedFriends);
 
         Friend friend = allFriends.stream()
-            .filter(f -> (f.getUser().getId().equals(friendId) || f.getFriend().getId().equals(friendId)))
-            .findFirst()
-            .orElse(null);
+                .filter(f -> (f.getUser().getId().equals(friendId) || f.getFriend().getId().equals(friendId)))
+                .findFirst()
+                .orElse(null);
 
         if (friend != null) {
             // 신고 사유 저장 (별도 테이블이 있다면 Report 엔티티에 저장, 없다면 로그 등)
@@ -126,7 +135,7 @@ public class FriendServiceImpl implements FriendService {
     @Transactional(readOnly = true)
     public List<FriendResponseDTO.FriendInfoSummary> getRequestedFriends(Long userId) {
         List<Friend> friendRequests = friendRepository.findByStatusAndFriendIdOrderByCreatedAtDesc(
-            FriendStatus.REQUESTED, userId);
+                FriendStatus.REQUESTED, userId);
 
         // 신청한 친구(User) 정보 추출
         // 친구 신청이 없을 때 빈 리스트 반환
@@ -135,8 +144,41 @@ public class FriendServiceImpl implements FriendService {
         }
 
         return friendRequests.stream()
-                .map(f -> friendConverter.toFriendSummary(f.getUser()))
+                .map(Friend::getUser)
+                .map(this::getFriendInfoSummary)
                 .collect(Collectors.toList());
+    }
+
+    private FriendResponseDTO.FriendInfoSummary getFriendInfoSummary(User friend) {
+//        User friend = req.getUser();
+
+        int goalCnt = friend.getUserGoals() != null ? friend.getUserGoals().size() : 0;
+        boolean isNewPhotoVerify = checkTodayPhotoVerification(friend); // 서비스 내 유틸/레포 호출
+        LocalTime todayTime = calculateTodayTotalTime(friend);          // 기존 메서드 유지
+
+        return friendConverter.toFriendSummary(friend, goalCnt, isNewPhotoVerify, todayTime);
+    }
+
+    private LocalTime calculateTodayTotalTime(User user) {
+        try {
+            // 사용자의 모든 목표에 대해 오늘 타이머 시간을 합계
+            long totalSeconds = user.getUserGoals().stream()
+                    .mapToLong(userGoal -> {
+                        try {
+                            LocalTime goalTime = timerVerificationService.getTodayTotalTime(userGoal);
+                            return goalTime.toSecondOfDay();
+                        } catch (Exception e) {
+                            log.warn("사용자 {} 목표 {} 타이머 시간 조회 실패: {}", user.getNickname(), userGoal.getGoal().getId(), e.getMessage());
+                            return 0L;
+                        }
+                    })
+                    .sum();
+
+            return LocalTime.ofSecondOfDay(totalSeconds);
+        } catch (Exception e) {
+            log.warn("사용자 {} 오늘 타이머 시간 계산 실패: {}", user.getNickname(), e.getMessage());
+            return LocalTime.of(0, 0, 0);
+        }
     }
 
     @Override
@@ -144,12 +186,12 @@ public class FriendServiceImpl implements FriendService {
     public boolean rejectFriendRequest(Long userId, Long friendId) {
         // 나(userId)에게 친구 신청한 친구(friendId)를 찾음
         List<Friend> requests = friendRepository.findByStatusAndFriendIdOrderByCreatedAtDesc(
-            FriendStatus.REQUESTED, userId);
+                FriendStatus.REQUESTED, userId);
 
         Friend friend = requests.stream()
-            .filter(f -> f.getUser().getId().equals(friendId))
-            .findFirst()
-            .orElse(null);
+                .filter(f -> f.getUser().getId().equals(friendId))
+                .findFirst()
+                .orElse(null);
 
         if (friend != null) {
             friendRepository.delete(friend); // 엔티티 삭제
@@ -164,12 +206,12 @@ public class FriendServiceImpl implements FriendService {
     public boolean acceptFriendRequest(Long userId, Long friendId) {
         // 나(userId)에게 친구 신청한 친구(friendId)를 찾음
         List<Friend> requests = friendRepository.findByStatusAndFriendIdOrderByCreatedAtDesc(
-            FriendStatus.REQUESTED, userId);
+                FriendStatus.REQUESTED, userId);
 
         Friend friend = requests.stream()
-            .filter(f -> f.getUser().getId().equals(friendId))
-            .findFirst()
-            .orElse(null);
+                .filter(f -> f.getUser().getId().equals(friendId))
+                .findFirst()
+                .orElse(null);
 
         if (friend != null) {
             friend.setStatus(FriendStatus.ACCEPTED); // 상태를 ACCEPTED로 변경
@@ -185,10 +227,10 @@ public class FriendServiceImpl implements FriendService {
     public boolean sendFriendRequest(Long userId, Long friendId) {
         // 이미 친구 관계가 있는지, 이미 신청했는지 체크(중복 방지)
         List<Friend> existingAccepted = friendRepository.findByStatusAndUserIdOrStatusAndFriendIdOrderByCreatedAtDesc(
-            FriendStatus.ACCEPTED, userId, FriendStatus.ACCEPTED, userId);
+                FriendStatus.ACCEPTED, userId, FriendStatus.ACCEPTED, userId);
 
         List<Friend> existingRequested = friendRepository.findByStatusAndUserIdOrStatusAndFriendIdOrderByCreatedAtDesc(
-            FriendStatus.REQUESTED, userId, FriendStatus.REQUESTED, userId);
+                FriendStatus.REQUESTED, userId, FriendStatus.REQUESTED, userId);
 
         // 두 리스트 합치기
         List<Friend> allExisting = new ArrayList<>();
@@ -196,7 +238,7 @@ public class FriendServiceImpl implements FriendService {
         allExisting.addAll(existingRequested);
 
         boolean alreadyRequested = allExisting.stream()
-            .anyMatch(f -> (f.getUser().getId().equals(friendId) || f.getFriend().getId().equals(friendId)));
+                .anyMatch(f -> (f.getUser().getId().equals(friendId) || f.getFriend().getId().equals(friendId)));
 
         if (alreadyRequested) {
             return false; // 이미 친구거나 신청함
@@ -264,5 +306,32 @@ public class FriendServiceImpl implements FriendService {
 
         // 차단 관계를 찾지 못했을 때
         throw new UserException(ErrorStatus._BAD_REQUEST);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public void isFriend(Long userId, Long creatorId) {
+        List<Friend> friendRelations = friendRepository
+                .findByStatusAndUserIdOrStatusAndFriendIdOrderByCreatedAtDesc(
+                        FriendStatus.ACCEPTED, userId,
+                        FriendStatus.ACCEPTED, userId);
+
+        boolean isFriend = friendRelations.stream()
+                .anyMatch(friend ->
+                        (friend.getUser().getId().equals(creatorId) && friend.getFriend().getId().equals(userId)) ||
+                                (friend.getFriend().getId().equals(creatorId) && friend.getUser().getId().equals(userId))
+                );
+        if (!isFriend) {
+            throw new RuntimeException("친구 관계가 아니므로 목표를 조회할 수 없습니다.");
+        }
+    }
+
+    private boolean checkTodayPhotoVerification(User user) {
+        try {
+            return photoVerificationRepository.existsTodayPhotoVerificationByUserId(user.getId());
+        } catch (Exception e) {
+            log.warn("사용자 {} 오늘 사진 인증 조회 실패: {}", user.getNickname(), e.getMessage());
+            return false;
+        }
     }
 }
